--- a/05-Position-and-Grid/00_Project_exercise/styles.css
+++ b/05-Position-and-Grid/00_Project_exercise/styles.css
@@ -10,6 +10,8 @@ body {
     max-width: 400px;
     margin: 0 auto;
     overflow: hidden;
+    margin: 1% auto;
+    display: inline-block;
 }
 
 /* Card style one - Classic */
@@ -75,3 +77,38 @@ body {
     opacity: 1;
 }
 
+/* More info card */
+.card.card--read-more .content{
+    position: relative;
+}
+
+.card.card--read-more .content .content__btn{
+    border-radius: 18px;
+    padding: 6px 24px;
+    color: white;
+    background-color: #00C7C2;
+    border: none;
+    cursor: pointer;
+    font-size: larger;
+
+    position: absolute;
+    bottom: 18px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    z-index: 1;
+}
+
+.card.card--read-more .content::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(120, 79, 79, 0.619);
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 28%, rgba(255,255,255,0) 58%);
+}
