--- a/05-Position-and-Grid/00_Project_exercise/styles.css
+++ b/05-Position-and-Grid/00_Project_exercise/styles.css
@@ -12,6 +12,7 @@ body {
     overflow: hidden;
     margin: 1% auto;
     display: inline-block;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 /* Card style one - Classic */
@@ -111,4 +112,77 @@ body {
 
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 28%, rgba(255,255,255,0) 58%);
+}
+
+/* Card 3 - BG Image */
+.card.card--bg-img{
+    position: relative;
+}
+
+.card.card--bg-img .card__bg-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.card.card--bg-img::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.card.card--bg-img .head {
+    z-index: 1;
+}
+
+.card.card--bg-img .head .head__tag {
+    left: 18px;
+    right: unset;
+}
+
+.card.card--bg-img .head .head__action {
+    position: absolute;
+    top: 15px;
+    right: 18px;
+    font-size: xx-large;
+    opacity: 0.8;
+    color: #FF508C;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+
+.card.card--bg-img .head .head__action:hover {
+    opacity: 1;
+}
+
+.card.card--bg-img .content {
+    color: #fff;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    padding-bottom: 2px;
+}
+
+.card.card--bg-img .content .content__desc {
+    margin-bottom: 12px;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    color: #fff;
+}
+
+.card.card--bg-img .content .content__title {
+    margin: 0px 0px 4px 0px;
+    padding: 0px;
+    color: #fff;
 }
