--- a/05-Position-and-Grid/00_Project_exercise/styles.css
+++ b/05-Position-and-Grid/00_Project_exercise/styles.css
@@ -98,6 +98,10 @@ body {
     z-index: 1;
 }
 
+.card.card--read-more .content .content__btn:hover {
+    background-color: #006B5F;
+}
+
 .card.card--read-more .content::after{
     content: "";
     width: 100%;
@@ -165,8 +169,8 @@ body {
 
 .card.card--bg-img .content {
     color: #fff;
-    position: relative;
-    top: 0px;
+    position: absolute;
+    bottom: 0px;
     left: 0px;
     z-index: 2;
     padding-bottom: 2px;
@@ -205,6 +209,10 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.panel:hover {
+    color: #FF508C;
 }
 
 .panel .panel__text {
