--- a/05-Position-and-Grid/04_Navigation-float/styles.css
+++ b/05-Position-and-Grid/04_Navigation-float/styles.css
@@ -44,3 +44,91 @@ body {
     color: rgb(0, 102, 0);
     letter-spacing: 1.1px;
 }
+
+main {
+    position: relative;
+}
+
+article {
+    width:75%;
+}
+
+h1 {
+    font-family: Georgia, serif;
+    font-size: 1.2em;
+}
+
+aside {
+    position: absolute;
+    top: 0px;
+    right: 8%;
+    color: rgb(0, 102, 0);
+}
+
+aside ul {
+    list-style-type: square;
+}
+
+aside a {
+    color: rgb(0, 102, 0);
+    text-decoration: none;
+    font-family: Georgia, serif;
+    font-weight: 200;
+} 
+
+h3 {
+    font-family: Georgia, serif;
+    font-size: 1em;
+}
+
+img {
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.25) ;
+}
+
+.img1 {
+    padding: 7px;
+    border: 3px solid black;
+    background-color: white;
+    margin: 0px 0px 15px 15px;
+}
+
+.part1 img {
+    float: right;
+}
+
+.part2 {
+    position: relative;
+}
+
+blockquote {
+    border-left: 2px solid rgba(0, 0, 0, 0.25);
+    padding: 0px 0px 20px 30px;
+    margin-top: 0px;
+    margin-right: 0px;
+    font-style: italic;
+    max-width: 35%;
+    float: right;
+    right: 0px;
+    top: 0px;
+    font-family: Georgia, serif;
+}
+
+blockquote p {
+    margin-top: 0px;
+}
+
+blockquote:last-child {
+    text-align: right;
+}
+
+blockquote .author {
+    text-align: right;
+}
+
+.img2 {
+    float: left;
+    padding: 7px;
+    border: 3px solid black;
+    background-color: white;
+    margin: 0px 15px 15px 0px
+}
