--- a/08-Exam-Prep/03bis_Wirework/styles.css
+++ b/08-Exam-Prep/03bis_Wirework/styles.css
@@ -10,8 +10,105 @@
     --clr-green: #1b9772;
     --clr-green-text: #3aa483;
     --clr-green-link: #8ec2aa;
+    --clr-white: #fff;
+
+    --header-height: 66px;
 }
 
 body {
     font-family: Helvetica, sans-serif;
+    color: var(--clr-grey-dark);
+}
+
+/* Navigation */
+.header {
+    position: sticky;
+    z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 2rem;
+}
+
+.header .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;  
+}
+
+.header .logo .main {
+    font-weight: bold;
+    font-size: 46px;
+    line-height: 1;
+}
+
+.header .logo .divider {
+    width: 1px;
+    height: 50px;
+    background-color: var(--clr-grey-bg);
+    display: inline-block;
+}
+
+.header .logo .sub {
+    font-size: 21px;
+    line-height: 1;
+}
+
+.header .nav {
+    display: flex;
+    gap: 2px;
+}
+
+.header .nav .nav-item {
+    padding: 1rem 2rem;
+    background-color: var(--clr-grey);
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header .nav .nav-item.active {
+    background-color: var(--clr-primary);
+    color: var(--clr-white);
+}
+
+.header .nav .nav-link {
+    text-decoration: none;
+    color: inherit;
+    letter-spacing: 1.1px;
+    line-height: 0.9;
+}
+
+/* HERO */
+#hero {
+    height: calc(100vh - var(--header-height));
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+#hero .img-container {
+    overflow: hidden;
+}
+
+#hero .img-container .hero-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#hero .content {
+    padding: 4rem;
+    background-color: var(--clr-primary);
+}
+
+#hero .content .text {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    color: var(--clr-white);
+    line-height: 1.5;
+    font-size: 19px;
 }
