--- a/08-Exam-Prep/03bis_Wirework/styles.css
+++ b/08-Exam-Prep/03bis_Wirework/styles.css
@@ -20,13 +20,19 @@ body {
     color: var(--clr-grey-dark);
 }
 
+
+
 /* Navigation */
 .header {
+    top: 0px;
     position: sticky;
     z-index: 100;
+
     display: flex;
     justify-content: space-between;
+
     padding: 0.5rem 2rem;
+    background-color: var(--clr-white);
 }
 
 .header .logo {
@@ -81,6 +87,8 @@ body {
     line-height: 0.9;
 }
 
+
+
 /* HERO */
 #hero {
     height: calc(100vh - var(--header-height));
@@ -111,4 +119,140 @@ body {
     color: var(--clr-white);
     line-height: 1.5;
     font-size: 19px;
+}
+
+#hero .content .text a {
+    color: var(--clr-white);
+}
+
+
+
+/* Sections */
+.section--full {
+    padding: 6rem 4rem;
+}
+
+.section-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+}
+
+.section-grid .section-grid-item{
+    text-align: center;
+}
+
+
+
+/* Features */
+#features {
+    background-color: var(--clr-grey-bg);
+    color: var(--clr-white);
+}
+
+#features .section-grid-item .icon-container {
+    padding: 1.5rem;
+    background-color: var(--clr-primary);
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+#features .section-grid-item .icon-container i {
+    font-size: 48px;
+    text-align: center;
+}
+
+#features .section-grid-item .title {
+    margin-bottom: 1.2rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+#features .section-grid-item .divider {
+    height: 1px;
+    background-color: var(--clr-grey-text);
+    margin-bottom: 1rem;
+}
+
+#features .section-grid-item .desc {
+    color: var(--clr-grey-text);
+    font-size: 20px;
+}
+
+
+
+/* call to action => Subscribe */
+#subscribe {
+    background-color: var(--clr-white);
+    text-align: center;
+    color: var(--clr-grey-bg);
+}
+
+#subscribe .title {
+    font-size: 42px;
+}
+
+#subscribe .desc {
+    font-size: 22px;
+    color: var(--clr-grey-text);
+    margin-bottom: 2rem;
+}
+
+#subscribe .btn {
+    border: none;
+    background-color: var(--clr-green);
+    color: var(--clr-white);
+    padding: 1rem 3.5rem;
+    font-size: 22px;
+    letter-spacing: 2px;
+}
+
+
+
+/* Advantages */
+#advantages {
+    background-color: var(--clr-grey-bg);
+    color: var(--clr-white);
+}
+
+#advantages .section-grid-item .title {
+    margin-bottom: 2rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+#advantages .section-grid-item .desc {
+    color: var(--clr-grey-text);
+    font-size: 20px;
+}
+
+
+
+/* FOOTER */
+#footer {
+    background-color: var(--clr-green);
+    font-weight: bold;
+}
+
+#footer .resources {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    display: inline-flex;
+    /* display: flex; */
+    justify-content: center;
+    /* align-items: center; */
+    /* flex-wrap: wrap; */
+    gap: 2px;
+    background-color: var(--clr-green-link);
+}
+
+#footer .resources .resource {
+    background-color: var(--clr-green);
+    padding: 0 1rem;
+}
+
+#footer a {
+    color: var(--clr-green-link);
+    text-decoration: none;
+    font-size: 18px;
 }
